--- a/index.html
+++ b/index.html
@@ -129,13 +129,13 @@
    
 
     <div class="container copyright text-center mt-4">
-      <p><strong class="px-1 sitename">Powered by Chronicles SDC</strong></p>
+      <a href="https://chroniclesoft.com/"><strong class="px-1 sitename">Powered by Chronicles Software</strong></p>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        <a href="https://chroniclesoft.com/">Chronicles SDC</a>
+        <!-- <a >Chronicles So</a> -->
       </div>
     </div>
 
