--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
           </div>
           <img src="assets/img/more-removebg-preview.png" class="img-fluid hero-img" alt="" data-aos="zoom-out" data-aos-delay="300">
 
-          <!-- <div >
+          <div >
          
-            <a href="https://student.nappsunifiedexam.com/instruction/596/62/2120" class="btn-get-started" style="margin-left: 1rem;">NAPPS Unified Demo Test</a>
+            <a href="https://quicktest.nappsunifiedexam.com/instruction/71" class="btn-get-started" style="margin-left: 1rem;">NAPPS UNIFIED EXAM QUICK TEST</a>
           
-          </div> -->
+          </div>
         </div>
       </div>
 
